--- a/css/native.css
+++ b/css/native.css
@@ -4,8 +4,6 @@ body {
 }
 
 header {
-	display: flex;
-	align-items: center;
 	background-image: url(https://robcartwrightphotography.files.wordpress.com/2011/11/dsc7136_5.jpg);
 	background-position: bottom center;
 	background-size: cover;
@@ -13,6 +11,13 @@ header {
 	height: 300px;
 	text-align: center;
 	border: 4px black;
+}
+
+.posit {
+	display: -webkit-flex;
+	display: flex;
+	-webkit-justify-content: center;
+    justify-content: center;
 }
 
 header img {
@@ -36,7 +41,10 @@ a:visited {
 	color: #F0D200;
 }
 
-h1 {
+header h1 {
+	text-align: center;
+	margin-right: auto;
+	margin-left: auto;
 	background-color: #D9D5D0;
 	color: #5B5555;
 	width: 300px;
@@ -44,8 +52,15 @@ h1 {
 
 }
 
-h2 {
+section h2 {
 	color: white;
+	text-align: center;
+	/*background:#7f7f7f;*/
+   padding: 10px 10px 10px 10px;
+   margin-right: auto;
+   margin-left: auto;
+   width: 300px;
+  background:rgba(0,0,0,0.5);
 }
 
 /* my original navigation css
@@ -111,40 +126,38 @@ section {
 
 #obj {
 	background-color: #73F2B0;
-	box-shadow: inset 5px 5px 10px #55B282;
-	padding-top: 80px;
+	box-shadow: inset 0 7px 9px -7px #55B282;
+	padding-top: 20px;
 }
 
 #abt {
 	background-color: #73F2B0;
-	box-shadow: 5px 5px 10px #55B282;
 }
 
 #edu {
 	background-color: #F45C88;
-	box-shadow: 5px 5px 10px #B44464;
+	box-shadow:inset 0 7px 9px -7px #B44464;
 }
 
 #cour {
 	background-color: #F45C88;
-	box-shadow: 5px 5px 10px #B44464;
 }
 
 #skills {
 	background-color: #EA9100;
-	box-shadow: 5px #AA6900;
+	box-shadow: inset 0 7px 9px -7px #AA6900;
 }
 
 #details {
 	background-color: #EA9100;
-	box-shadow: 5px #AA6900;
 }
 
 footer {
+	padding-top: 80px;
 	width: 100%;
 	height: 100px;
 	background-color: #002141;
-	padding-top: 20px;
+	box-shadow: inset 0 7px 9px -7px #001A33;
 }
 
 footer p {
