--- a/css/native.css
+++ b/css/native.css
@@ -1,47 +1,53 @@
 /* CSS styles for Efelle page */
 body {
-	color: white;
+	color: #FFFFF9;
+	font-family: sans-serif;
+}
+
+#blur {
+	padding: 20px;
+	background-image: url('../images/header_cobalt.png');
+	background-size: cover;
+	background-position: center;
+	width: 100%;
+	height: 300px;
+	-webkit-filter: blur(2px);
+	z-index: -1;
+	position: relative;
 }
 
 header {
-	padding: 40px;
-	background-color: #333;
+	padding-left: 20px;
+	padding-top: 60px;
 	width: 100%;
 	height: 300px;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 1;
 }
-
 header img {
 	float: left;
 	height: 120px;
 	width: auto;
-	border-radius: 10px 20px;
-	border: 2px solid #002141;
+	border-radius: 5px;
+	border: 1px solid #002141;
+	margin: 10px;
 }
 
 header p {
 	font-style: italic;
-}
-
-a:link {
-	color: #F0D200;
-	text-decoration: none;
-}
-
-a:hover {
-	text-shadow: 2px 2px 4px #B09A00;
-	text-decoration: none;
-}
-
-a:visited {
-	color: #F0D200;
+	margin-left: 10px;
+	width: 50%;
 }
 
 header h1 {
 	font-size: 200%;
+	margin-left: 10px;
 }
 
 section h2 {
-	color: black;
+	color: #FFF579;
 	font-size: 150%;
 }
 
@@ -56,13 +62,13 @@ section h2 {
 
 .light {
 	padding: 20px;
-	background-color: #B2B2B2;
+	background-color: #8E9699;
 	height: 400px;
 }
 
 .dark {
 	padding: 20px;
-	background-color: #999999;
+	background-color: #828A8D;
 	height: 400px;
 }
 
@@ -71,8 +77,29 @@ footer {
 	padding: 20px;
 	width: 100%;
 	height: 100px;
-	background-color: #333;
-	box-shadow: inset 0 7px 9px -7px #616161;
+	background-color: #63696B;
+	box-shadow: inset 0 7px 9px -7px #4B5051;
 }
 
+a:link {
+	color: #67E7FF;
+	text-decoration: none;
+}
 
+a:hover {
+	text-shadow: 2px 2px 4px #5CD0E5;
+	text-decoration: none;
+}
+
+a:visited {
+	color: #67E7FF;
+}
+
+.btn {
+  color: #FFFFF9;	
+  background-color: #9AFFC0;
+  font-size: 20px;
+  padding: 5px 10px 5px 10px;
+  border: solid white 1px;
+  text-decoration: none;
+}
