--- a/css/native.css
+++ b/css/native.css
@@ -2,6 +2,7 @@
 body {
 	color: #FFFFF9;
 	font-family: 'sans-serif';
+	font-size: 14px;
 }
 
 #blur {
@@ -12,6 +13,9 @@ body {
 	width: 100%;
 	height: 300px;
 	-webkit-filter: blur(2px);
+	-moz-filter: blur(2px); 
+	-o-filter: blur(2px); 
+	-ms-filter: blur(2px); 
 	z-index: -1;
 	position: relative;
 }
@@ -112,6 +116,7 @@ a:visited {
   border: solid #92FAFE 1px;
   border-radius: 5px;
   text-decoration: none;
+  float: left;
 }
 
 .btn:hover {
