--- a/css/native.css
+++ b/css/native.css
@@ -1,13 +1,13 @@
 /* CSS styles for Efelle page */
 body {
-	color: #FFFFF9;
+	color: #586E75;
 	font-family: 'sans-serif';
 	font-size: 14px;
 }
 
 #blur {
 	padding: 20px;
-	background-image: url('../images/hbg.png');
+	background-image: url('../images/bannertest.png');
 	background-size: cover;
 	background-position: center;
 	width: 100%;
@@ -61,7 +61,7 @@ header p {
 }
 
 section h2 {
-	color: #FFF579;
+	color: #B58900;
 	font-size: 150%;
 }
 
@@ -76,13 +76,13 @@ section h2 {
 
 .light {
 	padding: 20px;
-	background-color: #8E9699;
+	background-color: #002B36;
 	height: 400px;
 }
 
 .dark {
 	padding: 20px;
-	background-color: #828A8D;
+	background-color: #073642;
 	height: 400px;
 }
 
@@ -95,41 +95,40 @@ footer {
 	padding: 20px;
 	width: 100%;
 	height: 100px;
-	background-color: #63696B;
+	background-color: #073642;
 	box-shadow: inset 0 7px 9px -7px #4B5051;
 }
 
 a:link {
-	color: #92FAFE;
+	color: #2AA198;
 	text-decoration: none;
 }
 
 a:hover {
-	color: #002141;
+	color: #268BD2;
 	text-decoration: none;
 }
 
 a:visited {
-	color: #92FAFE;
+	color: #2AA198;
 }
 
 .btn {
-  background-color: #002141;
+  background-color: #268BD2;
   font-size: 14px;
   padding: 8px 20px 8px 20px;
-  border: solid #92FAFE 1px;
+  border: solid #586E75 1px;
   border-radius: 5px;
   text-decoration: none;
   float: left;
 }
 
 .btn:hover {
-	background-color: #92FAFE;
+	background-color: #586E75;
 	/*box-shadow: 2px 0px 0px 1px #002141;*/
-	box-shadow: 2px 2px 20px 4px #002141;
 }
 
 .btn:active {
-	background-color: #92FAFE;
+	background-color: #586E75;
 	box-shadow: inset 0 4px 4px 0 black;
 }
