--- a/css/native.css
+++ b/css/native.css
@@ -29,12 +29,16 @@ header {
 	top: 0;
 	left: 0;
 	z-index: 1;
+	-webkit-box-shadow: inset 0px -13px 16px -1px rgba(238,232,213,1);
+	-moz-box-shadow: inset 0px -13px 16px -1px rgba(238,232,213,1);
+	box-shadow: inset 0px -13px 16px -1px rgba(238,232,213,1);
 }
 
 header h1 {
 	font-size: 200%;
 	margin-left: 10px;
-	text-shadow: 1px 1px #0086F4;
+	text-shadow: 1px 1px #EEE8D5;
+	color: #FDF6E3;
 }
 
 header img {
@@ -63,6 +67,7 @@ header p {
 section h2 {
 	color: #B58900;
 	font-size: 150%;
+	padding-bottom: 5px;
 }
 
 #lcontainer {
@@ -90,6 +95,7 @@ ul {
 	list-style-type: circle;
 	margin-left: 0px;
 	padding-left: 0px;
+	list-style-position: inside;
 }
 
 footer {
@@ -122,6 +128,7 @@ a:visited {
   border-radius: 5px;
   text-decoration: none;
   float: left;
+  color: #FDF6E3;
 }
 
 .btn:hover {
