--- a/css/native.css
+++ b/css/native.css
@@ -1,12 +1,13 @@
 /* CSS styles for Efelle page */
 body {
 	color: #586E75;
-	font-family: 'sans-serif';
+	font-family: 'Open Sans', sans-serif;
 	font-size: 16px;
+	font-weight: 300;
 }
 
 body p {
-	line-height: 150%;
+	line-height: 120%;
 }
 
 #blur {
@@ -26,7 +27,7 @@ body p {
 
 header {
 	padding-left: 20px;
-	padding-top: 80px;
+	padding-top: 40px;
 	width: 100%;
 	height: 300px;
 	position: absolute;
@@ -40,6 +41,7 @@ header h1 {
 	margin-left: 10px;
 	text-shadow: 1px 1px #EEE8D5;
 	color: #268BD2;
+	font-weight: 600;
 }
 
 header img {
@@ -64,7 +66,8 @@ header a {
 section h2 {
 	color: #2AA198;
 	font-size: 150%;
-	padding-bottom: 5px;
+	padding-bottom: 10px;
+	font-weight: 600;
 }
 
 #lcontainer {
@@ -106,15 +109,18 @@ footer {
 a:link {
 	color: #B58900;
 	text-decoration: none;
+	font-weight: 400;
 }
 
 a:hover {
 	color: #268BD2;
 	text-decoration: none;
+	font-weight: 400;
 }
 
 a:visited {
 	color: #BF8900;
+	font-weight: 400;
 }
 
 .btn {
@@ -129,7 +135,6 @@ a:visited {
 
 .btn:hover {
 	background-color: #586E75;
-	/*box-shadow: 2px 0px 0px 1px #002141;*/
 }
 
 .btn:active {
