--- a/css/native.css
+++ b/css/native.css
@@ -27,7 +27,7 @@ body p {
 
 header {
 	padding-left: 20px;
-	padding-top: 40px;
+	padding-top: 20px;
 	width: 100%;
 	height: 300px;
 	position: absolute;
@@ -57,6 +57,9 @@ header p {
 	margin-left: 10px;
 	width: 40%;
 	padding-bottom: 20px;
+	line-height: 1;
+	font-size: 14px;
+	background-color: rgba(255, 255, 255, 0.5);
 }
 
 header a {
