--- a/css/native.css
+++ b/css/native.css
@@ -109,6 +109,11 @@ footer {
 	box-shadow: inset 0 7px 9px -7px #4B5051;
 }
 
+footer p {
+	width: 60%;
+}
+
+
 a:link {
 	color: #B58900;
 	text-decoration: none;
@@ -117,17 +122,15 @@ a:link {
 
 a:hover {
 	color: #268BD2;
-	text-decoration: none;
-	font-weight: 400;
 }
 
 a:visited {
 	color: #BF8900;
-	font-weight: 400;
 }
 
+
 .btn {
-  background-color: #268BD2;
+  background-color: #586E75;
   font-size: 14px;
   padding: 8px 20px 8px 20px;
   border: solid #586E75 1px;
@@ -137,10 +140,10 @@ a:visited {
 }
 
 .btn:hover {
-	background-color: #586E75;
+	background-color: #268BD2;
 }
 
 .btn:active {
-	background-color: #586E75;
+	background-color: #268BD2;
 	box-shadow: inset 0 4px 4px 0 black;
 }
