--- a/css/native.css
+++ b/css/native.css
@@ -49,7 +49,7 @@ header img {
 	height: 150px;
 	width: auto;
 	border-radius: 5px;
-	border: 1px solid #002141;
+	border: 1px solid #FDF6E3;
 	margin: 10px;
 }
 
@@ -69,7 +69,8 @@ header a {
 section h2 {
 	color: #2AA198;
 	font-size: 150%;
-	padding-bottom: 10px;
+	padding-top: 8px;
+	padding-bottom: 8px;
 	font-weight: 600;
 }
 
@@ -133,7 +134,7 @@ a:visited {
   background-color: #586E75;
   font-size: 14px;
   padding: 8px 20px 8px 20px;
-  border: solid #586E75 1px;
+  border: solid #FDF6E3 1px;
   border-radius: 5px;
   text-decoration: none;
   float: left;
