typeface added using css import

--- a/css/native.css
+++ b/css/native.css
@@ -1,4 +1,9 @@
 /* CSS styles for Efelle page */
+html, {
+	font: inherit;
+}
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+
 body {
 	color: #586E75;
 	font-family: 'Open Sans', sans-serif;
