--- a/css/native.css
+++ b/css/native.css
@@ -1,12 +1,12 @@
 /* CSS styles for Efelle page */
 
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+@import url(https://fonts.googleapis.com/css?family=Comfortaa);
 
 body {
 	color: #586E75;
-	font-family: 'Open Sans', sans-serif;
-	/*font-size: 16px;
-	font-weight: 300;*/
+	font-family: 'Comfortaa', serif;
+	font-size: 16px;
+	font-weight: 300;
 	background-color: #FDF6E3;
 }
 
