--- a/css/native.css
+++ b/css/native.css
@@ -1,4 +1,25 @@
-/* CSS styles for Efelle page */
+/*Reset CSS Styles for all browsers*/
+html, body, div, span, applet, object, iframe, p, blockquote, pre,
+h1, h2, h3, a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+
+/* Custom CSS styles for Efelle page */
 
 @import url(https://fonts.googleapis.com/css?family=Comfortaa);
 
@@ -6,7 +27,6 @@ body {
 	color: #586E75;
 	font-family: 'Comfortaa', serif;
 	font-size: 16px;
-	font-weight: 300;
 	background-color: #FDF6E3;
 }
 
@@ -45,7 +65,7 @@ header h1 {
 	margin-left: 10px;
 	text-shadow: 1px 1px #EEE8D5;
 	color: #268BD2;
-	font-weight: 600;
+	font-family: 'Comfortaa', serif;
 }
 
 header img {
@@ -76,7 +96,6 @@ h2 {
 	font-size: 150%;
 	padding-top: 8px;
 	padding-bottom: 8px;
-	font-weight: 600;
 }
 
 #lcontainer {
