--- a/css/native.css
+++ b/css/native.css
@@ -31,13 +31,11 @@ a:link {
 	color: #B58900;
 	text-decoration: none;
 }
-
-a:hover {
-	color: #268BD2;
-}
-
 a:visited {
 	color: #BF8900;
+}
+a:hover {
+	color: #268BD2;
 }
 
 #blur {
@@ -71,7 +69,8 @@ header h1 {
 	margin-left: 10px;
 	text-shadow: 1px 1px #EEE8D5;
 	color: #268BD2;
-	font-family: 'EB Garamond', 'sans-serif';
+	font-family: 'Comfortaa', sans-serif;
+	font-weight: 700;
 }
 
 header img {
@@ -117,13 +116,15 @@ h2 {
 }
 
 .light {
-	padding: 20px;
+	padding-left: 20px;
+	padding-right: 20px;
 	background-color: #FDF6E3;
 	height: 400px;
 }
 
 .dark {
-	padding: 20px;
+	padding-left: 20px;
+	padding-right: 20px;
 	background-color: #EEE8D5;
 	height: 400px;
 }
